--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -13,6 +13,7 @@
           formControlName="name"
           id="name"
           placeholder="e.g. Amay Lunagaria"
+          maxlength="25"
         />
 
         <span
@@ -166,6 +167,7 @@
             formControlName="educationtype"
             id="educationtype"
             placeholder="e.g. B. Tech / HSC / SSC"
+            maxlength="7"
           />
           <span
             class="reactive-span"
