major things done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,22 @@
             User Form
           </a>
         </li>
-        <li class="" role="presentation">
+        <!-- <li class="" role="presentation">
           <a
             class="py-2 px-3"
             routerLinkActive="active"
             routerLink="/user-detail"
           >
             User Detail
+          </a>
+        </li> -->
+        <li class="" role="presentation">
+          <a
+            class="py-2 px-3"
+            routerLinkActive="active"
+            routerLink="/user-list"
+          >
+            Users List
           </a>
         </li>
       </ul>
